--- a/MyMovies.Web/MyMovies.Web.csproj
+++ b/MyMovies.Web/MyMovies.Web.csproj
@@ -427,6 +427,7 @@
     <Content Include="Views\Movie\_DetailHeader.cshtml" />
     <Content Include="Views\Movie\_RelatedMovies.cshtml" />
     <Content Include="Views\Admin\SearchImdbTitle.cshtml" />
+    <Content Include="Views\Movie\Random.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
